src/app.css
/* ... */
.timeline:not(.flat) > li.timeline-item-container {
  --avatar-size: 50px;
  --line-start: 40px;
  --line-width: 3px;
  --line-end: calc(var(--line-start) + var(--line-width));
  background-image: linear-gradient(
    to right,
    transparent,
    transparent var(--line-start),
    var(--comment-line-color) var(--line-start),
    var(--comment-line-color) var(--line-end),
    transparent var(--line-end),
    transparent
  );
  background-repeat: no-repeat;
}
.timeline:not(.flat) > li.timeline-item-container-start {
  margin-bottom: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  border-bottom: 0;
  background-position: 0 calc(16px + var(--avatar-size));
}
.timeline:not(.flat) > li.timeline-item-container-middle {
  margin-top: 0;
  margin-bottom: 0;
  border-radius: 0;
  border-bottom: 0;
  border-top: 0;
}
.timeline:not(.flat) > li.timeline-item-container-end {
  margin-top: 0;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-top: 0;
  background-size: 100% 16px;
}
.timeline:not(.flat)
  > li:is(.timeline-item-container-middle, .timeline-item-container-end)
  .status-reply-to:not(.visibility-direct):not(.status-card) {
  background-image: none;
}
.timeline:not(.flat)
  > li.timeline-item-diff-author
  > :is(.status-link, .status-focus)
  > .status
  > a
  > .avatar {
  transform: scale(0.8);
  filter: drop-shadow(0 0 16px var(--bg-color))
    drop-shadow(0 0 8px var(--bg-color)) drop-shadow(0 0 8px var(--bg-color));
}

.timeline .show-more {
  padding-left: calc(var(--line-end) + var(--line-margin-end)) !important;
  text-align: left;
  background-color: transparent !important;
  backdrop-filter: none !important;
  position: relative;
  border-radius: 0;
  padding-block: 16px !important;
}
.timeline .show-more:hover {
  filter: none !important;
  color: var(--text-color) !important;
  background-color: var(--bg-faded-blur-color) !important;
}
.timeline .show-more:before {
  content: '';
  position: absolute;
  top: 10px;
  left: var(--line-start);
  width: var(--line-diameter);
  height: var(--line-diameter);
  border-radius: var(--line-radius);
  border-style: solid;
  border-width: var(--line-width);
  border-color: transparent transparent var(--comment-line-color) transparent;
  transform: rotate(45deg);
}

.status-loading {
  text-align: center;
  color: var(--text-insignificant-color);
  max-width: var(--main-width);
}
.status-error {
  text-align: center;
  color: var(--text-insignificant-color);
  max-width: var(--main-width);
}

.status-link {
  display: block;
  text-decoration-line: none;
  color: inherit;
  user-select: none;
  transition: background-color 0.2s ease-out;
  -webkit-tap-highlight-color: transparent;
  animation: appear 0.2s ease-out;
  -webkit-touch-callout: none;
}
@media (pointer: coarse) {
  .status-focus:not(.hero .status-focus) {
    /* Only the hero doesn't have context menu */
    user-select: none;
    -webkit-tap-highlight-color: transparent;
    -webkit-touch-callout: none;
  }
}
:is(.status-link, .status-focus):is(:focus, .is-active) {
  background-color: var(--link-bg-hover-color);
  outline-offset: -2px;
}
@media (hover: hover) {
  .status-link:hover {
    background-color: var(--link-bg-hover-color);
    outline-offset: -2px;
  }
}
.status-link:active:not(:has(:is(.media, button):active)) {
  filter: brightness(0.95);
}

.status-carousel {
  --carousel-faded-color: var(--bg-faded-color);
  background: linear-gradient(
    to bottom right,
    var(--carousel-faded-color),
    transparent 150%
  );
  position: relative;
}
.status-carousel:after {
  content: '';
  position: absolute;
  inset: 0;
  pointer-events: none;
  background-image: radial-gradient(
      ellipse 50% 32px at bottom center,
      var(--carousel-faded-color),
      transparent
    ),
    linear-gradient(to top, var(--bg-color), transparent 64px);
  background-repeat: no-repeat;
  background-position: bottom center;
}
.status-carousel header {
  padding: 8px 16px 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.status-carousel h3 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  text-transform: uppercase;
  color: var(--carousel-color);
  text-shadow: 0 1px var(--bg-color);
}
.status-carousel > ul {
  display: flex;
  overflow-x: auto;
  overflow-y: hidden;
  scroll-snap-type: x mandatory;
  scroll-behavior: smooth;
  margin: 0;
  padding: 8px 16px;
  gap: 16px;
  align-items: flex-start;
  counter-reset: index;
}
.status-carousel > ul > li {
  scroll-snap-align: center;
  scroll-snap-stop: always;
  flex-shrink: 0;
  display: flex;
  width: 100%;
  max-width: min(320px, calc(100% - 16px));
  list-style: none;
  margin: 0;
  padding: 0;
  max-height: 65vh;
  max-height: 65dvh;
  counter-increment: index;
  position: relative;
}
.status-carousel > ul > li:is(:empty, :has(> a:empty)) {
  display: none;
}
@media (hover: hover) or (pointer: fine) or (min-width: 40em) {
  .status-carousel > ul {
    scroll-snap-type: none;
  }
}
.status-carousel .content-container .content:only-child {
  font-size: calc(100% + 25% * max(2 - var(--content-text-weight), 0));
}
.status-carousel
  .content-container[data-content-text-weight='1']
  .media-container.media-eq1 {
  /* LOL, this is madness, reading a value from the style attribute */
  height: auto;
  min-height: 160px;
  max-height: max(160px, 50vh);
}
.status-carousel.boosts-carousel {
  --carousel-color: var(--reblog-color);
  --carousel-faded-color: var(--reblog-faded-color);
}
.status-carousel.boosts-carousel .status-reblog {
  background-image: none;
}
.status-carousel.boosts-carousel > ul > li:before {
  content: counter(index);
  position: absolute;
  left: 0;
  font-size: 10px;
  color: var(--carousel-color);
  padding: 8px;
}

.ui-state {
  padding: 16px;
  text-align: center;
}
/* ... */

